--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <html>
     <head>
+        <title>Hi I'm Jithin Xavier</title>
+        <link rel="stylesheet" href="style.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Hello Guys, It's  Jithin here</h1>
+        <div class="nav-bar">
+            <div class="item">My Bio Data</div>
+            <div class="item">Home</div>
+        </div>
+        <div class="contents">
+            <div class="profile">
+                <div class="under-construction">Site Under Construction <span style="color: red">!!!</span</div>
+            </div>
+        </div>
     </body>
 </html>
