under construction message added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </div>
         <div class="contents">
             <div class="profile">
-                <div class="under-construction">Site Under Construction <span style="color: red">!!!</span</div>
+                <div class="under-construction">Site Under Construction <span style="color: rgba(66, 60, 146, 0.404)">!!!</span</div>
             </div>
         </div>
     </body>
