--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="nav-bar">
+        <!-- <div class="nav-bar">
             <div class="item">My Bio Data</div>
             <div class="item">Home</div>
-        </div>
+        </div> -->
+        <header>
+            
+        </header>
         <div class="contents">
             <div class="profile">
                 <div class="under-construction">Site Under Construction <span style="color: rgba(66, 60, 146, 0.404)">!!!</span</div>
