--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
         <div class="contents">
             <div class="profile">
-                <div class="under-construction">Site Under Construction <span style="color: rgba(26, 107, 157, 0.62)">!!!</span</div>
+                <div class="under-construction">Site Under Construction <span>!!!</span</div>
             </div>
         </div>
     </body>
