--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
         <div class="contents">
             <div class="profile">
-                <div class="under-construction">Michelle is Awesome. Ennaval parayaan paranju. <span>!!!</span</div>
+                <div class="under-construction">Anil is awesome <span>!!!</span</div>
             </div>
         </div>
     </body>
