--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
-<html>
+<html !DOCTYPE = html>
     <head>
         <title>Hi I'm Jithin Xavier</title>
         <link rel="stylesheet" href="style.css"/>
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <!-- <div class="nav-bar">
-            <div class="item">My Bio Data</div>
-            <div class="item">Home</div>
-        </div> -->
-        <header>
-            
-        </header>
-        <div class="contents">
-            <div class="profile">
-                <div class="under-construction">Anil is awesome <span>!!!</span</div>
+        </head>
+        <body>
+            <!-- <div class="nav-bar"><div class="item">My Bio Data</div><div class="item">Home</div></div> -->
+            <header></header>
+            <div class="contents">
+                <div class="profile">
+                    <div class="under-construction">Site Under Constructionssssss
+                        <span>!!!</span
+                    </div>
+                </div>
             </div>
-        </div>
-    </body>
-</html>
+        </body>
+    </html>
