--- a/resume/index.html
+++ b/resume/index.html
@@ -1,8 +1,100 @@
 <html>
-    <head>
 
-    </head>
-    <body>
-        <h1>This is a Resume Page</h1>
-    </body>
+<head>
+    <link rel="stylesheet" href="resume-style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
+</head>
+
+<body>
+    <div class="container">
+        <div class="heading">
+        </div>
+        <div class="mid">
+            <div class="left-pane">
+                <div class="avatar">
+                    <img src="../images/avatar.jpg" />
+                </div>
+                <div class="profile-name">
+                    Jithin Xavier
+                </div>
+                <div class="designation">
+                    Technology Specialist
+                </div>
+            </div>
+            <div class="content-pane">
+                <!--About me section-->
+                <div>
+                    <h1>About Me</h1>
+                    <div class="about">
+                        <div class="about-me">
+                            In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available.
+                        </div>
+                        <div class="details">
+                            <div class="phone">
+                                <span class="details-title">Phone</span>
+                                <span class="details-value">+91 9747161101</span>
+                            </div class="email">
+                            <div>
+                                <span class="details-title">Email</span>
+                                <span class="details-value"><a href="mailto:jithinxt93@gmail.com">jithinxt93@gmail.com</a></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Employers Session-->
+                <div>
+                    <h1>Employers</h1>
+                    <div class="employers">
+                        <div class="employer" title="Google Inc.">
+                            <div class="logo">
+                                <img src="../images/employer/google.png" />
+                            </div>
+                            <div class="detail">
+                                <p class="company-name">Litmus7 Systems Consulting Private Limited</p>
+                                <p class="designation">Associate SoftwareEngineer</p>
+                                <p class="tenure">15 APRIL 2020 - PRESENT</p>
+                            </div>
+                        </div>
+
+                        <div class="employer">
+                            <div class="logo">
+                                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
+                            </div>
+                            <div class="detail">
+                                <p class="company-name">Litmus7 Systems Consulting Private Limited</p>
+                                <p class="designation">Associate SoftwareEngineer</p>
+                                <p class="tenure">2021-10-15 - 2021-11-30</p>
+                            </div>
+                        </div>
+
+                        <div class="employer">
+                            <div class="logo">
+                                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
+                            </div>
+                            <div class="detail">
+                                <p class="company-name">Litmus7 Systems Consulting Private Limited</p>
+                                <p class="designation">Associate SoftwareEngineer</p>
+                                <p class="tenure">2021-10-15 - 2021-11-30</p>
+                            </div>
+                        </div>
+
+                        <div class="employer">
+                            <div class="logo">
+                                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
+                            </div>
+                            <div class="detail">
+                                <p class="company-name">Litmus7 Systems Consulting Private Limited</p>
+                                <p class="designation">Associate SoftwareEngineer</p>
+                                <p class="tenure">2021-10-15 - 2021-11-30</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
