fix resume employer section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="contents">
         <div class="profile">
             <div class="under-construction">
-                <a href="/resume/"><button>Resume</button></a>
+                <a href="/resume/index.html"><button>Resume</button></a>
             </div>
         </div>
     </div>
