--- a/resume/index.html
+++ b/resume/index.html
@@ -33,7 +33,7 @@
                         <div class="details">
                             <div class="phone">
                                 <span class="details-title">Phone</span>
-                                <span class="details-value">+91 9747161101</span>
+                                <span class="details-value"><a href="tel:+91 9747161101">+91 9747161101</a></span>
                             </div class="email">
                             <div>
                                 <span class="details-title">Email</span>
@@ -47,49 +47,37 @@
                 <div>
                     <h1>Employers</h1>
                     <div class="employers">
-                        <div class="employer" title="Google Inc.">
+                        <div class="employer" title="Litmus7 Systems Consulting Pvt. Ltd.">
                             <div class="logo">
-                                <img src="../images/employer/google.png" />
+                                <span class="count">1</span>
                             </div>
                             <div class="detail">
-                                <p class="company-name">Litmus7 Systems Consulting Private Limited</p>
-                                <p class="designation">Associate SoftwareEngineer</p>
-                                <p class="tenure">15 APRIL 2020 - PRESENT</p>
+                                <p class="company-name">Litmus7 Systems Consulting Pvt. Ltd.</p>
+                                <p class="designation">Technology Specialist, Java</p>
+                                <p class="tenure">1 Oct 2020 - Present</p>
+                            </div>
+                        </div>
+                        <div class="employer" title="Litmus7 Systems Consulting Pvt. Ltd.">
+                            <div class="logo">
+                                <span class="count">2</span>
+                            </div>
+                            <div class="detail">
+                                <p class="company-name">Litmus7 Systems Consulting Pvt. Ltd.</p>
+                                <p class="designation">Associate Engineer</p>
+                                <p class="tenure">25 Jul 2017 - 30 Sep 2020</p>
+                            </div>
+                        </div>
+                        <div class="employer" title="Nibodha Technologies">
+                            <div class="logo">
+                                <span class="count">3</span>
+                            </div>
+                            <div class="detail">
+                                <p class="company-name">Nibodha Technologies</p>
+                                <p class="designation">Associate Software Engineer</p>
+                                <p class="tenure">2 Mar 2016 - 31 Mar 2017</p>
                             </div>
                         </div>
 
-                        <div class="employer">
-                            <div class="logo">
-                                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
-                            </div>
-                            <div class="detail">
-                                <p class="company-name">Litmus7 Systems Consulting Private Limited</p>
-                                <p class="designation">Associate SoftwareEngineer</p>
-                                <p class="tenure">2021-10-15 - 2021-11-30</p>
-                            </div>
-                        </div>
-
-                        <div class="employer">
-                            <div class="logo">
-                                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
-                            </div>
-                            <div class="detail">
-                                <p class="company-name">Litmus7 Systems Consulting Private Limited</p>
-                                <p class="designation">Associate SoftwareEngineer</p>
-                                <p class="tenure">2021-10-15 - 2021-11-30</p>
-                            </div>
-                        </div>
-
-                        <div class="employer">
-                            <div class="logo">
-                                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
-                            </div>
-                            <div class="detail">
-                                <p class="company-name">Litmus7 Systems Consulting Private Limited</p>
-                                <p class="designation">Associate SoftwareEngineer</p>
-                                <p class="tenure">2021-10-15 - 2021-11-30</p>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
