replace avatar with url

--- a/resume/index.html
+++ b/resume/index.html
@@ -13,7 +13,7 @@
         <div class="mid">
             <div class="left-pane">
                 <div class="avatar">
-                    <img src="../images/avatar.jpg" />
+                    <img src="https://image.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg" />
                 </div>
                 <div class="profile-name">
                     Jithin Xavier
